--- a/Radio Color.html
+++ b/Radio Color.html
@@ -15,7 +15,7 @@
 </script>
 </head>
 <title>Radio de color</title>
-<!--Empesamos con el Cuerpo o Body-->
+
 <body>
 	<form name=coloreando>
 <fieldset>
@@ -33,11 +33,8 @@
 		<tr>
 			<td>&nbsp;</td>
   		</tr>
-	</table>
- 	.-----. .-----. </div>
-    
+	</table>.-----. .-----. </div>
 	</form>
-	<!--y se cierra el Form/ Finalizado Crasmic -->
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/actua.js"></script>
