--- a/assets/registrar personal.html
+++ b/assets/registrar personal.html
@@ -21,15 +21,15 @@
 		<td>
 			
 			<select id="i_exp" style >
-				<option value="cbba">Cochabamba</option>
-				<option value="stc">Santa Cruz</option>
-				<option value="lp">La Paz</option>
-				<option value="or">Oruro</option>
-				<option value="pt">Potosi</option>
-				<option value="be">Beni</option>
-				<option value="pa">Pando</option>
-				<option value="chu">Chuquisaca</option>
-				<option value="tar">Tarija</option>
+				<option value="Cbba">Cochabamba</option>
+				<option value="Sz">Santa Cruz</option>
+				<option value="Lp">La Paz</option>
+				<option value="Or">Oruro</option>
+				<option value="Pt">Potosi</option>
+				<option value="Bn">Beni</option>
+				<option value="Pd">Pando</option>
+				<option value="Cq">Chuquisaca</option>
+				<option value="Tr">Tarija</option>
 			</select>
 
 		</td>
