--- a/assets/FormCrearPersona.html
+++ b/assets/FormCrearPersona.html
@@ -7,8 +7,8 @@ and open the template in the editor.
 <html>
 <thead>
 	<meta charset="utf-8">
-	<script src="js/jquery.js"></script>
-	<script src="js/funcion.js"></script>
+	<script src="Js/jquery.js"></script>
+	<script src="Js/funcion.js"></script>
 
 </thead>
 <tbody>
