agregar, eliminar productos

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<td><input class="c_precio" type="number" value="6.5"/></td>
 			<td><input class="c_total" type="number" value="13" readonly/></td>
 			<td><a href="#" onclick="copiarFila(this)">Copiar</a></td>
+			<td><a href="#" onclick="addTableRow(this)">Eliminar</a></td>
 		</tr>
 	</tbody>
 	</table>
