--- a/completo.html
+++ b/completo.html
@@ -7,15 +7,10 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<tr>
   
-
 <div class="container">
-
-
-
 <div class="panel panel-default">
+  
 <!-- Inicio css1-->
   <div class="panel-heading">
   <h2>Example 1 css</h2>
@@ -23,7 +18,7 @@
   <h1 class="visible-xs">This text is shown only on an EXTRA SMALL screen.</h1>
   <h1 class="visible-sm">This text is shown only on a SMALL screen.</h1>
   <h1 class="visible-md">This text is shown only on a MEDIUM screen.</h1>
-  <h1 class="visible-lg">This text is shown only on a LARGE screen.</h1></tr>
+  <h1 class="visible-lg">This text is shown only on a LARGE screen.</h1>
   </div>
 <!-- fin-->
 
@@ -32,7 +27,7 @@
   <h1>Example 2 css</h1>
       <h2>Image</h2>
   <p>The .img-responsive class makes the image scale nicely to the parent element (resize the browser window to see the effect):</p>                  
-  <img src="cinqueterre.jpg" class="img-responsive" alt="Cinque Terre" width="304" height="236"> 
+  <img src="asset/imagen/cinqueterre.jpg" class="img-responsive" alt="Cinque Terre" width="304" height="236"> 
   </div>
 <!-- Fin-->
 
@@ -72,7 +67,6 @@
    <!-- Inicio componentes -->
      <div class="panel-body">
      <h1>Example 4 componente</h1>
-
 <button type="button" class="btn btn-default" aria-label="Left Align">
   <span class="glyphicon glyphicon-knight" aria-hidden="true"></span>
 </button>
