--- a/Grupo_trabajo-Devsof.html
+++ b/Grupo_trabajo-Devsof.html
@@ -7,13 +7,12 @@
 
    <link href="asset/js/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-          <script src="http://code.jquery.com/jquery.js"></script>
+      
+       
 
 <link rel="stylesheet" href="asset/js/bootstrap-3.3.6-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="asset/js/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="asset/js/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+<script src="asset/js/jquery/jquery.js"></script>
 
 <script src="asset/js/jsBoot1.js"></script>
 
